# python_template

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
scripts/: consts.py  show_structure.py
src/: config.py  main.py
src/core/: tool.py
src/logger/: __init__.py
