[tool.poetry]
name = "default-template"
version = "0.1.0"
description = ""
authors = ["Oleksandr <olukianets@lytvynov-production.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
pydantic-core = "^2.27.2"
pydantic-settings = "^2.7.1"
loguru = "^0.7.3"
money-parser = "^0.0.1"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
